# guarani-translator

./: README.md  combined.sh  email template.docx  guarani-cons-mod.docx  project timeline.odt  sources.docx  translatorBrainstorm.docx
americasnlp2021/baseline_system/: augmented  augmented.sh  combined.sh  original.sh  requirements.txt  run_job.sh  test.sh
americasnlp2021/baseline_system/translations/: score_report.sh
americasnlp2021/data/guarani-spanish/: test.es  test.gn
americasnlp2021/data/guarani-spanish/cleaner scripts/: command.txt  data-cleaner.py  jsonFormatter.py
americasnlp2021/data/guarani-spanish/original-finland-data/: test.es  test.gn
americasnlp2021/data/guarani-spanish/uruguay-data/: combiner.py  train-uruguay.es  train-uruguay.gn
augmented-dataset/: dups.py  test.es  train.gn
augmented-dataset/augmented-with-dups/: train.es
code/: constitution-es-separated.txt  constitution-es.docx  constitution-es.txt  constitution-gn.docx  constitution-gn.txt  corpora_maker.py  test.txt  translator.py
constitution/: constitution-cleaner.py  constitution-gn-separated.txt  constitution.es  constitution.gn
data-extractions/Tataoeba/: .~lock.Sentence pairs in Spanish-Guarani - 2022-07-04.tsv#  Sentence pairs in English-Guarani - 2022-07-04.tsv  Sentence pairs in Italian-Guarani - 2022-07-04.tsv  Sentence pairs in Portuguese-Guarani - 2022-07-04.tsv  Sentence pairs in Spanish-Guarani - 2022-07-04.tsv  tatoeba.es  tatoeba.gn
data-extractions/constitution/: constitution.es  constitution.gn
data-extractions/frases/: frases.txt  sources.md
data-extractions/glosbe/: glosbe.py
data-extractions/hablemos-guarani/: enhancer.py
data-extractions/jojajovai/: combined.gn  dev.gn  splitter.py  te.es  test-anlp.es  test-anlp.gn  tg.gn  token_counter.py  train.gn
data-extractions/source-material/: constitution-gn.docx  itahari.docx
data-extractions/source-material/backup/: itahari.gn
data-extractions/uruguay/: data-cleanser.py  train-uruguay.es  train-uruguay.gn
google-cloud-dev/: python-translator-344600-7514993056d3.json
new-dataset/: avane.es  combiner.py  setence-separator.py
new-dataset/avane/: avane.es  avane.gn
new-dataset/itahari/: itahari.es  itahari.gn
new-dataset/source-material/: constitution-es.docx
new-dataset/source-material/backup/: avane.es  avane.gn  itahari.es
newcorpora/: new.gn
original-dataset/: dev.es  dev.gn  test.es  test.gn  train.es  train.gn
