Teju Jagua niko Tau ha Kerana memby ypykue. 
Ko mymba tuicha ha ijaiguetereíva hete teju ha 
iñakã jagua.
Ha’e iñakã pokõi jaguápe ojoguáva. Hete katu 
teju guasu raicha tyryryhápe oikóva, ha tuichaitereígui ndikatúi opyrũ mbarete. Oje’e hese 
ipoguýpe oguerekoha umi itakua ha avei oñangarekoha ti’a kuéra rehe. Oĩ he’íva Teju Jagua 
oikoha yva ha eíra año rehe.
Mbói Tu’ĩ niko peteĩ mymba ijaiguéva ha tuchaitereíva. Hete ojogua mbóipe, iñakã katu ha’ete tu’ĩ.
Oguereko ndaje ipoguýpe umi karugua guasu, 
tuju ha y renda ojepysóva umi ñu rehe. Mbói tu’ĩ 
yva año rehe oiko. Mbói Tu’ĩ oñangareko ndaje 
umi mymba oikóva yvy ári ha ýpe oikokuaháva 
rehe. Upéicha avei: ysapy, ti’a akỹ ha yvotykuéra omohyakuãva ñu oikoha rupi ha’e.
Moñái ndaje oikundaha ñu ha ka’aguýre. Tape 
oĩva rupi ou ha oho hesa hory asy ha ijurúpe 
pukavy.
Ha’e karai guasu umi ñúre oikóva ha oñangareko yvytu ha guyra kuéra rehe; ha’éichagua ndipói umi tendáre.
Moñái ndaje oñangareko monda pyre ha hembiapo aiguéva mo’ãha ramo. Iñakã tavy rehe 
Porasýre ojehapy Moñái peteĩ itakuápe ojeikuaháva ko’ãnga ``Moñaikuare´´ opyta haguére 
upépe Moñái ha ipehẽngue kuéra kusugue.
Jasy Jatere niko peteĩ mitã’i yvága raicha hesa 
hovy asýva ha kuarahy mimbi raicha iñakãrague 
sa’yju.
Michĩ ramo jepe ombotavy ha ombopaje opa 
oiko reíva asajépe. Oje’e hese opívo oikoha opa 
rupiete ha ipópe oguerahaha ka’a rakã pehẽngue 
ome’ẽva chupe heta pu’aka okañy haguã opávagui ha omoambuéva sapy’a guyra’i ituruñe’ẽpy 
omonge ohasa asývape. Umi oikovéva ipoguýgui 
ojeráva, ojere tavyete.
Kurupi niko peteĩ karai karape ha ijaiguepáva, 
oikóva asajépe, omaña ka’aguýre kañyháme 
umi kuña oiko reíva asajépe ñúre. 
Kyhyjépe kuñataĩ oñeha’ã okañy hesa renondégui, ha katu Kurupi ojuráne katuete hembo 
puku reheve ha ogueraha ka’aguy hesakã 
hápe, kapi’ípe hovyũ hyakuãvu reíva ári orairõ, 
ombotarova térã ojuka peve
Ao-Ao oñangareko heñói porã haguã opa mba’e 
oĩva ko yvy ári. Oguereko avei ipoguýpe yvyty 
kuéra opaichagua. Ko ñande ypykuéra ijaigue 
ha oñemuñaeterei, ha oiko kure ka’aguy raicha 
ojoakykuéi oikundaha umi ñu ha ka’aguýre.
Umi yvypóra nahendái mamove chugui kuéra 
ha ndikatúi oikove py’a guapýpe ikyhyje háre 
chugui kuéra. 
Oje’e niko pindo rehe rejupírõ añoite ndaje 
ndojapói nderehe mba’eve. 
Luisõ peteĩ mymba jaguápe ojoguáva, ijaigue, 
hesa vera ha iñakã guasu. Pyhare pyte vove oho 
ojapajeréi te’õngue ári, upévare hesa’yju ha ine. 
Osẽ ndaje avei pyhare oguahu puku, opávape 
ohendúva ombohetero’ypa. Sapy’a rei opokorõ 
nderehe teĩ po ro’ysãva, upéva niko Luisõ nemomarandúva oguahẽmaha nde ára paha. Oĩramo 
kuña imembýva pokõi kuimba’e ojoakykuéi, pe 
pahaguéva ha’e va’erã katuete Luisõ.
Ymaite guive te’ýipe ava itujavéva omembe’u mborayhu karia’y ha 
kuñataĩ  hérava  Yvoty  ha  Pyryrỹi,  ha’ekuéra  ndojojái  ite’ýipe  katu 
ojohayhu kiririháme upéicha hágui ojuhu hikuái ha ndohejavéi ojohecha. Pyryrỹi ohekánte oikóvo.
Jasy ombyasy karia’y py’apýre ha omombe’u: Kuehe ahecha jevy 
Yvoty  oñembyasy  ha  hasẽ  oipota  háre  apyre  omenda  ava  ite’ýi 
guáva ha ha’e ombotove. Yvytu omombe’u Tupã ohenduha ijahe’o 
ha oñemomarangatu ipy’apýre ha omoingo yvotýrõ.
Mba’e yvoty ere chéve mba’éichagua yvoty mba’éicha ajuhúta ha 
katu jasy ndaikatúi ombohovái karia’ýpe.
Pyryrỹi oñembyasy ha ojerure pytyvõ Tupã ajuhú va’erã. Aikuaha 
yvoty roguépe ajuhúta ijuru he’ẽngue. Chepytyvõke tajuhu chupe.
Jasy ojehesa’o ohechávo oñyñýi Pyryrỹi opyta peve ichugui guyra 
vevyimi  heta  sa’y  oguerekóva  ha  sapy’aite  osẽva  oveve  hagẽte: 
ha’e Mainumby.
Upe guive menarãngue ohasa hi’ára ohekávo yvyra rakã ijyvotýva 
ha ohetũ pya’ete yvoty rembe ohekávo peteĩnte.
Ymaite  guive  itujavéva  te’ýipe  omombe’u  ndojuhuiha  gueteri 
yvotýpe.
Ko mombe´ upy ndaje he’i peteĩ kuñataĩ ipuru’ã va’ekue peteĩ ára 
itúva  renondépe,  kóva  ningo  ava  ruvicha. Ha’e  oporandu  oikuahaségui mávapa itúva. Ha heta porandu jepe ava ruvicha kuñataĩ 
ikirirĩnte.
Porundy  jasy  rire  heñói  peteĩ  mitãkuña’i,  oñembohéra  va’ekue 
Mandi, ha’e mbovy jasy rire oñepy’amongeta ituicháva raicha. Ko 
mba’e ohenói heta yvypórape ambue tendágui ohecha haguã pe 
mitãme. Upéicha hágui omboty ramo peteĩ ary, ko mitãkuña he’i 
itúva ha iramóipe: amanóta, avave ndoroviái chupe ndahasýi háre. 
Ha katu ho’a ha omano.
Ojejaty va’ekue isy rógape, ha oñembo’y opa ára ojejaty haguépe. 
Opa hasẽ ha ojahe’o pe mitã manóre. Isy ombo’y py’ỹíete pe tenda 
ojejaty haguépe imemby.
Sapy’a peteĩ ára heñói ipye peteĩ ka’avo ha Mandi ramói, ohapo’o pe 
ipoguasu porãva, upéi oipiro, omongu’i, ombopupu ha oipuru mayma tembi’úpe: mbujape ha opa chiparã. Upe guive Mandi ome’ẽ 
hapo ha omongaru ava kuérape ha ohasa rire peteĩ ary hapo jeýma 
oúva takã oñeñotýva ichugui. Mandi raichante avei noheñóiva ta’­igui. Upéicha hágui ohupyty hikuái peteĩ jesyrykurã ivúva, ka’uy.
Hérare ha ome’ẽ haguére tembi’u opa ára rupi oikovéva hóga ypýgui, pe ka’avo oñembohéra va’ekue mandi’o.
Ani haguã hogue manomba ko ka’avo, ro’y aja, oje’éva ñaguenohẽ’arã chugui peteĩ rakã Viernes Santo-pe ha ojejaty va’erã ñúme. 

